--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test #;MVCC=TRUE
+    url: jdbc:h2:tcp://localhost/~/donation-server #;MVCC=TRUE
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create #스테이징과 운영 서버는 validate 또는 none
     properties:
       hiberate:
-        show-sql: true
+#        show-sql: true
         format-sql: true
 
 logging:
