--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+  thymeleaf:
+    cache: false
   jpa:
     hibernate:
       ddl-auto: none #스테이징과 운영 서버는 validate 또는 none
