--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/donation-server #;MVCC=TRUE
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:tcp://localhost/~/donation-server #;MVCC=TRUE #
+    url: jdbc:mysql://localhost:3306/donation?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: qwerasdf
+#    driver-class-name: org.h2.Driver #
+    driver-class-name: com.mysql.cj.jdbc.Driver
   thymeleaf:
     cache: false
   jpa:
@@ -11,10 +13,9 @@ spring:
       ddl-auto: none #스테이징과 운영 서버는 validate 또는 none
     properties:
       hiberate:
-#        show-sql: true
+        show-sql: true
         format-sql: true
-
 logging:
   level:
-    org.hibernate.SQL: debug
+    org.hibernate.SQL: info
     org.hibernate.type: info
